# Triangles

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
include/: CMakeLists.txt  geometry.hpp  gettingValue.hpp  getting_value.hpp  mathUtils.hpp  math_utils.hpp  octree.hpp
source/: CMakeLists.txt  geometry.cpp  main.cpp  mathUtils.cpp  math_utils.cpp
tests/: CMakeLists.txt  e2eTests.cpp  tests.cpp  unitTests.cpp
tests/e2e/keys/: 16.txt  17.txt
tests/e2e/tests/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
